fix navtop size on smaller device

--- a/css/main.css
+++ b/css/main.css
@@ -502,6 +502,14 @@ a {
   }
 }
 @media screen and (max-width: 425px) {
+  .nav-top .container .nav-container .nav-logo {
+    font-size: 20px;
+  }
+  .nav-top .container .nav-container .hamburger-menu {
+    height: 19px;
+    width: 35px;
+  }
+
   .header h1 {
     font-size: 18px;
   }
