--- a/css/queries.sass
+++ b/css/queries.sass
@@ -167,6 +167,16 @@
 
 
 @media screen and ( max-width: 425px )
+    .nav-top
+        .container
+            .nav-container 
+                .nav-logo 
+                    font-size: 20px
+
+                .hamburger-menu 
+                    height: 19px
+                    width: 35px
+
     .header
         h1 
             font-size: 18px
